Adjusted footer sizing amd spacing, cleaned and deleted old code., fixed scroll-margin spacing for all h's

--- a/style.css
+++ b/style.css
@@ -28,27 +28,6 @@ header {
    box-shadow: 0em .0em .995em rgb(233, 145, 143);
 }
 
-/* Mobil Nav view */
-.burger-menu {
-   position: absolute;
-   top: 20px;
-   right: 20px;
-   display: none;
-   cursor: pointer;
-   z-index: 1000;
-   flex-direction: column;
-   justify-content: space-between;
-   width: 30px;
-   height: 20px;
-   box-shadow: -8px 8px 8px rgba(48, 48, 48, 0.233);
-}
-
-.burger-menu span {
-   height: 4px;
-   border-radius: 2px;
-   right: 0;
-}
-
 .nav-container {
    display: flex;
    align-items: center;
@@ -262,7 +241,7 @@ nav ul li a:hover {
 
 /* Scrolls to top of page*/
 #main {
-   scroll-margin-top: 20px;
+   scroll-margin-top: 50px;
 }
 
 /* Main Welcome Section h1 */
@@ -299,16 +278,16 @@ section p {
    color: rgb(255, 124, 121);
 }
 
+#my-services {
+   scroll-margin-top: 190px;
+}
+
 #my-services p {
    text-align: center;
    width: 80%;
    margin: 0 auto;
-   scroll-margin-top: 190px;
+   scroll-margin-top: 90px;
    margin: 0 auto 24px;
-}
-
-#my-services p {
-   /* width: 80%; */
 }
 
 #services-carousel {
@@ -501,14 +480,6 @@ section p {
    margin: 10px auto;
 }
 
-/* Footer */
-footer p {
-   text-align: center;
-   margin-top: 50px;
-   font-size: clamp(12px, 3vw, 16px);
-   color: rgb(253, 160, 159);
-}
-
 h1 {
    color: black;
    text-align: center;
@@ -519,27 +490,27 @@ h1 {
    margin: 40px auto;
 }
 
-#appointment-form {
+/* #appointment-form {
    align-items: center;
    width: 40%;
    margin: 0 auto;
-}
+} */
 
-#appointment-form label {
+/* #appointment-form label {
    display: block;
    margin-bottom: 10px;
    font-weight: 700;
-}
+} */
 
-#appointment-form input {
+/* #appointment-form input {
    margin-bottom: 20px;
    border: 2px solid rgb(190, 190, 190);
-}
+} */
 
-#button-container {
+/* #button-container {
    margin-top: 20px;
    text-align: center;
-}
+} */
 
 .hide {
    display: none;
@@ -555,9 +526,9 @@ h1 {
    background-color: red;
 }
 
-#appointment-details {
+/* #appointment-details {
    color: rgb(52, 55, 58);
-}
+} */
 
 .box.show-message::before,
 .box.show-message::after {
@@ -643,45 +614,14 @@ li.day b {
    width: 90px;
 }
 
-form input,
+/* form input,
 form select {
    padding: 10px;
    font-size: 1rem;
    border: 1px solid #cfcccc;
    border-radius: 5px;
    width: 100%;
-}
-
-
-/* Footer */
-footer p {
-   text-align: center;
-   margin-top: 50px;
-   font-size: clamp(12px, 3vw, 16px);
-   color: rgb(253, 160, 159);
-}   
-
-h1 {
-   color: black;
-   text-align: center;
-}
-
-#appointment-form {
-   align-items: center;
-   width: 40%;
-   margin: 0 auto;
-}
-
-#appointment-form label {
-   display: block;
-   margin-bottom: 10px;
-   font-weight: 700;
-}
-
-#appointment-form input {
-   margin-bottom: 20px;
-   border: 2px solid rgb(190, 190, 190);
-}
+} */
 
 .hide {
    display: none;
@@ -699,6 +639,35 @@ h1 {
    padding: 10px;
    background-color: rgb(255, 255, 255);
    border-radius: 8px;
+}
+
+/* Footer */
+footer {
+   text-align: center;
+   margin: 50px auto 0;
+   font-size: clamp(12px, 3vw, 16px);
+   color: rgb(253, 160, 159);
+}
+
+/* Mobil Nav view */
+.burger-menu {
+   position: absolute;
+   top: 20px;
+   right: 20px;
+   display: none;
+   cursor: pointer;
+   z-index: 1000;
+   flex-direction: column;
+   justify-content: space-between;
+   width: 30px;
+   height: 20px;
+   box-shadow: -8px 8px 8px rgba(48, 48, 48, 0.233);
+}
+
+.burger-menu span {
+   height: 4px;
+   border-radius: 2px;
+   right: 0;
 }
 
 /* Mobile responsiveness */
@@ -769,7 +738,7 @@ h1 {
       scroll-margin-top: -90px;
    }
    
-   footer p {
+   footer {
       font-size: .88rem;
    }
 }
@@ -931,11 +900,6 @@ h1 {
       font-size: 1.15em;
    }
 
-    /* {
-      margin: 0 0 6px;
-      font-size: .94em;
-   } */
-
    #my-services p {
       width: 80%;
       font-size: .92em;
@@ -1014,12 +978,9 @@ h1 {
 
    .business-hrs {
       width: 200px;
-   }
-
-   .business-hrs {
       margin: 0px auto;
    }
-   
+
    #contact-and-map {
       order: 1;
    }
@@ -1063,6 +1024,11 @@ h1 {
    .card span {
       font-size: 1em;
    }
+
+   footer {
+      margin-top: 20px;
+      font-size: .74em;
+   }
 }
 
 @media screen and (max-width: 600px) {
@@ -1090,6 +1056,7 @@ h1 {
       font-size: .82em;
    }
 
+   /* Gallery images chrink to size */
    .column {
       -ms-flex: 100%;
       flex: 100%;
@@ -1146,6 +1113,7 @@ h1 {
       justify-content: space-between;
       max-width: 300px;
    }
+   
    .form-and-info {
       width: 100%;
       margin: 0 auto;
@@ -1153,11 +1121,10 @@ h1 {
 
    #booking button {
       width: 60%;
-      font-size: .65rem;
+      font-size: .78rem;
       letter-spacing: .04rem;
       padding: 10px 0px;
    }
-
 }
 
 @media (max-width: 480px) {
@@ -1185,12 +1152,10 @@ h1 {
       scroll-margin-top: 290px;
    }
    
-   
    #main .about h2, #my-services h2 {
       font-size: .9rem;
       margin-bottom: 2px;
    }
-   
 
    #carousel li img {
       width: 90%;
@@ -1209,13 +1174,9 @@ h1 {
       font-size: .56em;
    }
 
-   h1.title {
-      font-size: 1em;
-   }
-
    hr {
       margin: 10px auto 5px;
-      width: 80%;
+      width: 78%;
    }
 
    nav ul li a {
@@ -1226,15 +1187,12 @@ h1 {
       width: 80%;
       font-size: .65rem;
       letter-spacing: .02rem;
-      padding: 10px 15px;
+      padding: 10px auto;
+      margin-bottom: 4px;
    }
 
-   footer p {
-      font-size: .7em;
-      margin: 20px auto 0;
-   }
-
-   #appointment-form {
-      width: 80%;
+   footer {
+      font-size: .68em;
+      margin: 20px auto;
    }
 }
